# sysops-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  practice-tickets.md  pyproject.toml
.github/workflows/: ci.yml
src/sysops_cli/: main.py
src/sysops_cli/devops/: commands.py
src/sysops_cli/network/: commands.py
src/sysops_cli/sysadmin/: commands.py
tests/: test_devops.py  test_network.py  test_sysadmin.py
