[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysops-cli"
version = "0.1.0"
description = "A Typer CLI for practicing sysadmin, network engineering, and devops commands."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
sysops = "sysops_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sysops_cli"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
